fix: Add missing API keys to ExternalSecret configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/posterizarr/templates/externalsecret.yaml
+++ b/charts/media/posterizarr/templates/externalsecret.yaml
@@ -15,6 +15,15 @@ spec:
       mergePolicy: Replace
       data:
         PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
+        FANARTTV_API_KEY: "{{ `{{ .FANARTTV_API_KEY }}` }}"
+        TVDB_API_KEY: "{{ `{{ .TVDB_API_KEY }}` }}"
+        TMDB_READ_API_TOKEN: "{{ `{{ .TMDB_READ_API_TOKEN }}` }}"
   dataFrom:
     - find:
         path: PLEX_TOKEN
+    - find:
+        path: FANARTTV_API_KEY
+    - find:
+        path: TVDB_API_KEY
+    - find:
+        path: TMDB_READ_API_TOKEN
