--- a/charts/media/posterizarr/templates/configmap.yaml
+++ b/charts/media/posterizarr/templates/configmap.yaml
@@ -19,6 +19,7 @@ data:
     if [ -f "/config/temp/Posterizarr.Running" ]; then
         rm /config/temp/Posterizarr.Running
     fi
+    mkdir /config/watcher
   config.json.template: |
     {
       "ApiPart": {
