fix: Update main container image repository and tag in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/posterizarr/templates/statefulset.yaml
+++ b/charts/media/posterizarr/templates/statefulset.yaml
@@ -26,6 +26,7 @@ spec:
         app.kubernetes.io/name: {{ .Release.Name }}
     spec:
       enableServiceLinks: false
+      restartPolicy: Never
       serviceAccountName: {{ .Release.Name }}
       automountServiceAccountToken: true
       securityContext:
