--- a/charts/media/posterizarr/values.yaml
+++ b/charts/media/posterizarr/values.yaml
@@ -19,6 +19,6 @@ pods:
       tag: 4.47.2
   main:
     image:
-      repository: ghcr.io/dapperdivers/posterizarr
-      # renovate: datasource=docker depName=ghcr.io/dapperdivers/posterizarr versioning=semver
-      tag: v1.9.77
+      repository: ghcr.io/fscorrupt/posterizarr
+      # renovate: datasource=docker depName=ghcr.io/fscorrupt/posterizarr versioning=semver
+      tag: 1.9.81
