fix: Update asset paths in configmap and add data volume configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/posterizarr/templates/configmap.yaml
+++ b/charts/media/posterizarr/templates/configmap.yaml
@@ -52,13 +52,13 @@ data:
         "UploadExistingAssets": "false"
       },
       "PrerequisitePart": {
-        "AssetPath": "/assets",
+        "AssetPath": "/data/plex/assets",
         "SkipAddText": "false",
         "FollowSymlink": "false",
         "ForceRunningDeletion": "false",
         "AutoUpdatePosterizarr": "false",
-        "BackupPath": "/assetsbackup",
-        "ManualAssetPath": "/manualassets",
+        "BackupPath": "/data/plex/backup",
+        "ManualAssetPath": "/data/plex/manual",
         "PlexUpload": "false",
         "show_skipped": "false",
         "magickinstalllocation": "/usr/local/bin",
@@ -89,8 +89,8 @@ data:
         "seasonoverlayfile": "overlay-innerglow.png",
         "RTLFont": "Colus-Regular.ttf",
         "PlexUpload": "false",
-        "BackupPath": "/assetsbackup",
-        "ManualAssetPath": "/manualassets",
+        "BackupPath": "/data/plex/backup",
+        "ManualAssetPath": "/data/plex/manual",
         "ForceRunningDeletion": "false",
         "AutoUpdatePosterizarr": "false",
         "SkipAddText": "false",
