fix: Update config.json.template structure and add LibstoExclude fields for Plex, Jellyfin, and Emby parts
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/posterizarr/templates/configmap.yaml
+++ b/charts/media/posterizarr/templates/configmap.yaml
@@ -21,220 +21,239 @@ data:
     fi
   config.json.template: |
     {
-        "ApiPart": {
-            "FanartTvAPIKey": "${FANARTTV_API_KEY}",
-            "tvdbapi": "${TVDB_API_KEY}",
-            "tmdbtoken": "${TMDB_READ_API_TOKEN}",
-            "PlexToken": "${PLEX_TOKEN}",
-            "JellyfinAPIKey": "JELLYFINAPIKEY",
-            "EmbyAPIKey": "EMBYAPIKEY",
-            "FavProvider": "tmdb",
-            "WidthHeightFilter": "false",
-            "PosterMinWidth": "2000",
-            "PosterMinHeight": "3000",
-            "BgTcMinWidth": "3840",
-            "BgTcMinHeight": "2160",
-            "tmdb_vote_sorting": "vote_average",
-            "PreferredLanguageOrder": [
-                "xx",
-                "en"
-            ],
-            "PreferredSeasonLanguageOrder": [
-                "xx",
-                "en"
-            ],
-            "PreferredBackgroundLanguageOrder": [
-                "xx",
-                "en"
-            ]
-        },
-        "PlexPart": {
-            "PlexUrl": "http://plex.plex:32400",
-            "UsePlex": "true",
-            "UploadExistingAssets": "false"
-        },
-        "JellyfinPart": {
-            "JellyfinUrl": "http://local/jellyfin",
-            "UseJellyfin": "false",
-            "UploadExistingAssets": "false",
-            "ReplaceThumbwithBackdrop": "false"
-        },
-        "EmbyPart": {
-            "EmbyUrl": "http:/local/emby",
-            "UseEmby": "false",
-            "UploadExistingAssets": "false",
-            "ReplaceThumbwithBackdrop": "false"
-        },
-        "Notification": {
-            "SendNotification": "false",
-            "DiscordUserName": "Posterizarr",
-            "UseUptimeKuma": "false",
-            "AppriseUrl": "discord://${WebhookID}/${WebhookToken}/",
-            "Discord": "https://discordapp.com/api/webhooks/${WebhookID}/${WebhookToken}",
-            "UptimeKumaUrl": "https://uptime-kuma"
-        },
-        "PrerequisitePart": {
-            "AssetPath": "/data/plex/assets",
-            "SkipAddText": "false",
-            "FollowSymlink": "false",
-            "ForceRunningDeletion": "false",
-            "AutoUpdatePosterizarr": "false",
-            "BackupPath": "/data/plex/backup",
-            "ManualAssetPath": "/data/plex/manual",
-            "PlexUpload": "true",
-            "show_skipped": "false",
-            "magickinstalllocation": "/usr/local/bin",
-            "maxLogs": "5",
-            "font": "Colus-Regular.ttf",
-            "backgroundfont": "Colus-Regular.ttf",
-            "titlecardfont": "Colus-Regular.ttf",
-            "overlayfile": "overlay-innerglow.png",
-            "backgroundoverlayfile": "backgroundoverlay-innerglow.png",
-            "titlecardoverlayfile": "backgroundoverlay-innerglow.png",
-            "LibraryFolders": "true",
-            "Posters": "true",
-            "SeasonPosters": "true",
-            "BackgroundPosters": "false",
-            "TitleCards": "true",
-            "logLevel": "2",
-            "SkipTBA": "true",
-            "SkipJapTitle": "true",
-            "AssetCleanup": "true",
-            "AutoUpdateIM": "false",
-            "NewLineOnSpecificSymbols": "true",
-            "NewLineSymbols": [
-                " - ",
-                ": ",
-                " – "
-            ],
-            "seasonoverlayfile": "overlay-innerglow.png",
-            "RTLFont": "Colus-Regular.ttf",
-            "poster4k": "overlay-innerglow.png",
-            "Poster1080p": "overlay-innerglow.png",
-            "UsePosterResolutionOverlays": "false",
-            "DisableHashValidation": "false",
-            "Background4k": "backgroundoverlay-innerglow.png",
-            "Background1080p": "backgroundoverlay-innerglow.png",
-            "TC4k": "backgroundoverlay-innerglow.png",
-            "TC1080p": "backgroundoverlay-innerglow.png",
-            "UseBackgroundResolutionOverlays": "false",
-            "UseTCResolutionOverlays": "false"
-        },
-        "OverlayPart": {
-            "ImageProcessing": "true",
-            "outputQuality": "100%"
-        },
-        "PosterOverlayPart": {
-            "fontAllCaps": "true",
-            "AddBorder": "true",
-            "AddText": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "6",
-            "AddOverlay": "true",
-            "fontcolor": "white",
-            "bordercolor": "black",
-            "minPointSize": "45",
-            "maxPointSize": "300",
-            "borderwidth": "30",
-            "MaxWidth": "1900",
-            "MaxHeight": "500",
-            "text_offset": "+430",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        },
-        "BackgroundOverlayPart": {
-            "fontAllCaps": "true",
-            "AddOverlay": "true",
-            "AddBorder": "true",
-            "AddText": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "6",
-            "fontcolor": "white",
-            "bordercolor": "black",
-            "minPointSize": "100",
-            "maxPointSize": "300",
-            "borderwidth": "30",
-            "MaxWidth": "3640",
-            "MaxHeight": "500",
-            "text_offset": "+200",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        },
-        "TitleCardOverlayPart": {
-            "UseBackgroundAsTitleCard": "false",
-            "AddOverlay": "true",
-            "AddBorder": "true",
-            "bordercolor": "black",
-            "borderwidth": "30",
-            "BackgroundFallback": "true"
-        },
-        "TitleCardTitleTextPart": {
-            "fontAllCaps": "true",
-            "AddEPTitleText": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "6",
-            "fontcolor": "white",
-            "minPointSize": "50",
-            "maxPointSize": "150",
-            "MaxWidth": "3640",
-            "MaxHeight": "280",
-            "text_offset": "+300",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        },
-        "TitleCardEPTextPart": {
-            "fontAllCaps": "true",
-            "AddEPText": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "4",
-            "fontcolor": "white",
-            "minPointSize": "50",
-            "maxPointSize": "80",
-            "MaxWidth": "1000",
-            "MaxHeight": "120",
-            "text_offset": "+150",
-            "SeasonTCText": "Season",
-            "EpisodeTCText": "Episode",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        },
-        "SeasonPosterOverlayPart": {
-            "ShowFallback": "true",
-            "fontAllCaps": "true",
-            "AddBorder": "true",
-            "AddText": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "6",
-            "AddOverlay": "true",
-            "fontcolor": "white",
-            "bordercolor": "black",
-            "minPointSize": "95",
-            "maxPointSize": "250",
-            "borderwidth": "30",
-            "MaxWidth": "1900",
-            "MaxHeight": "500",
-            "text_offset": "+400",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        },
-        "ShowTitleOnSeasonPosterPart": {
-            "AddShowTitletoSeason": "false",
-            "fontAllCaps": "true",
-            "AddTextStroke": "false",
-            "strokecolor": "black",
-            "strokewidth": "6",
-            "fontcolor": "white",
-            "minPointSize": "45",
-            "maxPointSize": "300",
-            "MaxWidth": "1900",
-            "MaxHeight": "500",
-            "text_offset": "+300",
-            "lineSpacing": "0",
-            "TextGravity": "south"
-        }
+      "ApiPart": {
+        "FanartTvAPIKey": "${FANARTTV_API_KEY}",
+        "tvdbapi": "${TVDB_API_KEY}",
+        "tmdbtoken": "${TMDB_READ_API_TOKEN}",
+        "PlexToken": "${PLEX_TOKEN}",
+        "JellyfinAPIKey": "JELLYFINAPIKEY",
+        "EmbyAPIKey": "EMBYAPIKEY",
+        "FavProvider": "tmdb",
+        "WidthHeightFilter": "false",
+        "PosterMinWidth": "2000",
+        "PosterMinHeight": "3000",
+        "BgTcMinWidth": "3840",
+        "BgTcMinHeight": "2160",
+        "tmdb_vote_sorting": "vote_average",
+        "PreferredLanguageOrder": [
+          "xx",
+          "en"
+        ],
+        "PreferredSeasonLanguageOrder": [
+          "xx",
+          "en"
+        ],
+        "PreferredBackgroundLanguageOrder": [
+          "xx",
+          "en"
+        ]
+      },
+      "PlexPart": {
+        "PlexUrl": "http://plex.plex:32400",
+        "UsePlex": "true",
+        "UploadExistingAssets": "true",
+        "LibstoExclude": [
+          "Youtube",
+          "Audiobooks",
+          "Kids Audiobooks",
+          "Tech Trainings"
+        ]
+      },
+      "JellyfinPart": {
+        "JellyfinUrl": "http://local/jellyfin",
+        "UseJellyfin": "false",
+        "UploadExistingAssets": "false",
+        "ReplaceThumbwithBackdrop": "false",
+        "LibstoExclude": [
+          "Youtube",
+          "Audiobooks",
+          "KidsAudiobooks",
+          "TechTrainings"
+        ]
+      },
+      "EmbyPart": {
+        "EmbyUrl": "http:/local/emby",
+        "UseEmby": "false",
+        "UploadExistingAssets": "false",
+        "ReplaceThumbwithBackdrop": "false",
+        "LibstoExclude": [
+          "Youtube",
+          "Audiobooks",
+          "KidsAudiobooks",
+          "TechTrainings"
+        ]
+      },
+      "Notification": {
+        "SendNotification": "false",
+        "DiscordUserName": "Posterizarr",
+        "UseUptimeKuma": "false",
+        "AppriseUrl": "discord://${WebhookID}/${WebhookToken}/",
+        "Discord": "https://discordapp.com/api/webhooks/${WebhookID}/${WebhookToken}",
+        "UptimeKumaUrl": "https://uptime-kuma"
+      },
+      "PrerequisitePart": {
+        "AssetPath": "/data/plex/assets",
+        "SkipAddText": "false",
+        "FollowSymlink": "false",
+        "ForceRunningDeletion": "false",
+        "AutoUpdatePosterizarr": "false",
+        "BackupPath": "/data/plex/backup",
+        "ManualAssetPath": "/data/plex/manual",
+        "PlexUpload": "true",
+        "show_skipped": "false",
+        "magickinstalllocation": "/usr/local/bin",
+        "maxLogs": "5",
+        "font": "Colus-Regular.ttf",
+        "backgroundfont": "Colus-Regular.ttf",
+        "titlecardfont": "Colus-Regular.ttf",
+        "overlayfile": "overlay-innerglow.png",
+        "backgroundoverlayfile": "backgroundoverlay-innerglow.png",
+        "titlecardoverlayfile": "backgroundoverlay-innerglow.png",
+        "LibraryFolders": "true",
+        "Posters": "true",
+        "SeasonPosters": "true",
+        "BackgroundPosters": "false",
+        "TitleCards": "true",
+        "logLevel": "2",
+        "SkipTBA": "true",
+        "SkipJapTitle": "true",
+        "AssetCleanup": "true",
+        "AutoUpdateIM": "false",
+        "NewLineOnSpecificSymbols": "true",
+        "NewLineSymbols": [
+          " - ",
+          ": ",
+          " – "
+        ],
+        "seasonoverlayfile": "overlay-innerglow.png",
+        "RTLFont": "Colus-Regular.ttf",
+        "poster4k": "overlay-innerglow.png",
+        "Poster1080p": "overlay-innerglow.png",
+        "UsePosterResolutionOverlays": "false",
+        "DisableHashValidation": "false",
+        "Background4k": "backgroundoverlay-innerglow.png",
+        "Background1080p": "backgroundoverlay-innerglow.png",
+        "TC4k": "backgroundoverlay-innerglow.png",
+        "TC1080p": "backgroundoverlay-innerglow.png",
+        "UseBackgroundResolutionOverlays": "false",
+        "UseTCResolutionOverlays": "false",
+        "DisableOnlineAssetFetch": "false"
+      },
+      "OverlayPart": {
+        "ImageProcessing": "true",
+        "outputQuality": "100%"
+      },
+      "PosterOverlayPart": {
+        "fontAllCaps": "true",
+        "AddBorder": "true",
+        "AddText": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
+        "AddOverlay": "true",
+        "fontcolor": "white",
+        "bordercolor": "black",
+        "minPointSize": "45",
+        "maxPointSize": "300",
+        "borderwidth": "30",
+        "MaxWidth": "1900",
+        "MaxHeight": "500",
+        "text_offset": "+430",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      },
+      "BackgroundOverlayPart": {
+        "fontAllCaps": "true",
+        "AddOverlay": "true",
+        "AddBorder": "true",
+        "AddText": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
+        "fontcolor": "white",
+        "bordercolor": "black",
+        "minPointSize": "100",
+        "maxPointSize": "300",
+        "borderwidth": "30",
+        "MaxWidth": "3640",
+        "MaxHeight": "500",
+        "text_offset": "+200",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      },
+      "TitleCardOverlayPart": {
+        "UseBackgroundAsTitleCard": "false",
+        "AddOverlay": "true",
+        "AddBorder": "true",
+        "bordercolor": "black",
+        "borderwidth": "30",
+        "BackgroundFallback": "true"
+      },
+      "TitleCardTitleTextPart": {
+        "fontAllCaps": "true",
+        "AddEPTitleText": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
+        "fontcolor": "white",
+        "minPointSize": "50",
+        "maxPointSize": "150",
+        "MaxWidth": "3640",
+        "MaxHeight": "280",
+        "text_offset": "+300",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      },
+      "TitleCardEPTextPart": {
+        "fontAllCaps": "true",
+        "AddEPText": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "4",
+        "fontcolor": "white",
+        "minPointSize": "50",
+        "maxPointSize": "80",
+        "MaxWidth": "1000",
+        "MaxHeight": "120",
+        "text_offset": "+150",
+        "SeasonTCText": "Season",
+        "EpisodeTCText": "Episode",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      },
+      "SeasonPosterOverlayPart": {
+        "ShowFallback": "true",
+        "fontAllCaps": "true",
+        "AddBorder": "true",
+        "AddText": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
+        "AddOverlay": "true",
+        "fontcolor": "white",
+        "bordercolor": "black",
+        "minPointSize": "95",
+        "maxPointSize": "250",
+        "borderwidth": "30",
+        "MaxWidth": "1900",
+        "MaxHeight": "500",
+        "text_offset": "+400",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      },
+      "ShowTitleOnSeasonPosterPart": {
+        "AddShowTitletoSeason": "false",
+        "fontAllCaps": "true",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
+        "fontcolor": "white",
+        "minPointSize": "45",
+        "maxPointSize": "300",
+        "MaxWidth": "1900",
+        "MaxHeight": "500",
+        "text_offset": "+300",
+        "lineSpacing": "0",
+        "TextGravity": "south"
+      }
     }
