fix: Update config.json.template to include LibstoExclude fields for Plex, Jellyfin, and Emby, and adjust various configuration settings
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/posterizarr/templates/configmap.yaml
+++ b/charts/media/posterizarr/templates/configmap.yaml
@@ -29,216 +29,208 @@ data:
         "JellyfinAPIKey": "JELLYFINAPIKEY",
         "EmbyAPIKey": "EMBYAPIKEY",
         "FavProvider": "tmdb",
+        "PreferredLanguageOrder": [
+          "en"
+        ],
+        "PreferredSeasonLanguageOrder": [
+          "en"
+        ],
+        "tmdb_vote_sorting": "vote_average",
         "WidthHeightFilter": "false",
         "PosterMinWidth": "2000",
         "PosterMinHeight": "3000",
         "BgTcMinWidth": "3840",
         "BgTcMinHeight": "2160",
-        "tmdb_vote_sorting": "vote_average",
-        "PreferredLanguageOrder": [
-          "xx",
-          "en"
-        ],
-        "PreferredSeasonLanguageOrder": [
-          "xx",
-          "en"
-        ],
         "PreferredBackgroundLanguageOrder": [
-          "xx",
           "en"
         ]
       },
       "PlexPart": {
+        "LibstoExclude": [
+          "Music",
+          "Photos",
+          "Playlists"
+        ],
         "PlexUrl": "http://plex.plex:32400",
         "UsePlex": "true",
-        "UploadExistingAssets": "true",
-        "LibstoExclude": [
-          "Youtube",
-          "Audiobooks",
-          "Kids Audiobooks",
-          "Tech Trainings"
-        ]
+        "UploadExistingAssets": "false"
       },
       "JellyfinPart": {
-        "JellyfinUrl": "http://local/jellyfin",
+        "LibstoExclude": [
+          "Music",
+          "Photos",
+          "Playlists"
+        ],
+        "JellyfinUrl": "http://jellyfin.jellyfin:8097",
         "UseJellyfin": "false",
         "UploadExistingAssets": "false",
-        "ReplaceThumbwithBackdrop": "false",
-        "LibstoExclude": [
-          "Youtube",
-          "Audiobooks",
-          "KidsAudiobooks",
-          "TechTrainings"
-        ]
+        "ReplaceThumbwithBackdrop": "false"
       },
       "EmbyPart": {
-        "EmbyUrl": "http:/local/emby",
+        "LibstoExclude": [
+          "Music",
+          "Photos",
+          "Playlists"
+        ],
+        "EmbyUrl": "http://emby.emby:8096",
         "UseEmby": "false",
         "UploadExistingAssets": "false",
-        "ReplaceThumbwithBackdrop": "false",
-        "LibstoExclude": [
-          "Youtube",
-          "Audiobooks",
-          "KidsAudiobooks",
-          "TechTrainings"
-        ]
+        "ReplaceThumbwithBackdrop": "false"
       },
       "Notification": {
         "SendNotification": "false",
+        "AppriseUrl": "discord://{WebhookID}/{WebhookToken}/",
+        "Discord": "https://discord.com/api/webhooks/add-your-discord-webhook-here",
         "DiscordUserName": "Posterizarr",
         "UseUptimeKuma": "false",
-        "AppriseUrl": "discord://${WebhookID}/${WebhookToken}/",
-        "Discord": "https://discordapp.com/api/webhooks/${WebhookID}/${WebhookToken}",
-        "UptimeKumaUrl": "https://uptime-kuma"
+        "UptimeKumaUrl": "https://uptime-kuma.domain.com/api/push/asdfasdf"
       },
       "PrerequisitePart": {
         "AssetPath": "/data/plex/assets",
-        "SkipAddText": "false",
-        "FollowSymlink": "false",
-        "ForceRunningDeletion": "false",
-        "AutoUpdatePosterizarr": "false",
-        "BackupPath": "/data/plex/backup",
-        "ManualAssetPath": "/data/plex/manual",
-        "PlexUpload": "true",
-        "show_skipped": "false",
         "magickinstalllocation": "/usr/local/bin",
         "maxLogs": "5",
-        "font": "Colus-Regular.ttf",
-        "backgroundfont": "Colus-Regular.ttf",
-        "titlecardfont": "Colus-Regular.ttf",
-        "overlayfile": "overlay-innerglow.png",
-        "backgroundoverlayfile": "backgroundoverlay-innerglow.png",
-        "titlecardoverlayfile": "backgroundoverlay-innerglow.png",
+        "font": "Comfortaa-Medium.ttf",
+        "backgroundfont": "Comfortaa-Medium.ttf",
+        "titlecardfont": "Comfortaa-Medium.ttf",
+        "overlayfile": "bottom-up-fade.png",
+        "backgroundoverlayfile": "bottom-up-fade-background.png",
+        "titlecardoverlayfile": "bottom-up-fade-background.png",
         "LibraryFolders": "true",
         "Posters": "true",
         "SeasonPosters": "true",
-        "BackgroundPosters": "false",
+        "BackgroundPosters": "true",
         "TitleCards": "true",
+        "show_skipped": "false",
         "logLevel": "2",
         "SkipTBA": "true",
         "SkipJapTitle": "true",
         "AssetCleanup": "true",
         "AutoUpdateIM": "false",
-        "NewLineOnSpecificSymbols": "true",
-        "NewLineSymbols": [
-          " - ",
-          ": ",
-          " – "
-        ],
-        "seasonoverlayfile": "overlay-innerglow.png",
+        "seasonoverlayfile": "bottom-up-fade.png",
         "RTLFont": "Colus-Regular.ttf",
+        "NewLineOnSpecificSymbols": "false",
+        "NewLineSymbols": [
+          " - "
+        ],
+        "PlexUpload": "true",
+        "BackupPath": "/data/plex/backup",
+        "SkipAddText": "false",
+        "FollowSymlink": "false",
+        "ForceRunningDeletion": "false",
+        "AutoUpdatePosterizarr": "false",
+        "ManualAssetPath": "/data/plex/manual",
         "poster4k": "overlay-innerglow.png",
         "Poster1080p": "overlay-innerglow.png",
-        "UsePosterResolutionOverlays": "false",
-        "DisableHashValidation": "false",
         "Background4k": "backgroundoverlay-innerglow.png",
         "Background1080p": "backgroundoverlay-innerglow.png",
         "TC4k": "backgroundoverlay-innerglow.png",
         "TC1080p": "backgroundoverlay-innerglow.png",
+        "UsePosterResolutionOverlays": "false",
         "UseBackgroundResolutionOverlays": "false",
         "UseTCResolutionOverlays": "false",
+        "DisableHashValidation": "false",
         "DisableOnlineAssetFetch": "false"
       },
       "OverlayPart": {
         "ImageProcessing": "true",
-        "outputQuality": "100%"
+        "outputQuality": "92%"
       },
       "PosterOverlayPart": {
         "fontAllCaps": "true",
-        "AddBorder": "true",
+        "AddBorder": "false",
         "AddText": "true",
+        "AddOverlay": "true",
+        "fontcolor": "white",
+        "bordercolor": "white",
+        "minPointSize": "83",
+        "maxPointSize": "250",
+        "borderwidth": "30",
+        "MaxWidth": "1200",
+        "MaxHeight": "485",
+        "text_offset": "+300",
         "AddTextStroke": "false",
         "strokecolor": "black",
         "strokewidth": "6",
-        "AddOverlay": "true",
-        "fontcolor": "white",
-        "bordercolor": "black",
-        "minPointSize": "45",
-        "maxPointSize": "300",
-        "borderwidth": "30",
-        "MaxWidth": "1900",
-        "MaxHeight": "500",
-        "text_offset": "+430",
         "lineSpacing": "0",
         "TextGravity": "south"
       },
       "BackgroundOverlayPart": {
         "fontAllCaps": "true",
-        "AddOverlay": "true",
-        "AddBorder": "true",
-        "AddText": "true",
+        "AddOverlay": "false",
+        "AddBorder": "false",
+        "AddText": "false",
+        "fontcolor": "white",
+        "bordercolor": "white",
+        "minPointSize": "95",
+        "maxPointSize": "250",
+        "borderwidth": "30",
+        "MaxWidth": "3000",
+        "MaxHeight": "500",
+        "text_offset": "+200",
         "AddTextStroke": "false",
         "strokecolor": "black",
         "strokewidth": "6",
-        "fontcolor": "white",
-        "bordercolor": "black",
-        "minPointSize": "100",
-        "maxPointSize": "300",
-        "borderwidth": "30",
-        "MaxWidth": "3640",
-        "MaxHeight": "500",
-        "text_offset": "+200",
         "lineSpacing": "0",
         "TextGravity": "south"
       },
       "TitleCardOverlayPart": {
         "UseBackgroundAsTitleCard": "false",
         "AddOverlay": "true",
-        "AddBorder": "true",
-        "bordercolor": "black",
+        "AddBorder": "false",
+        "bordercolor": "white",
         "borderwidth": "30",
-        "BackgroundFallback": "true"
+        "BackgroundFallback": "false"
       },
       "TitleCardTitleTextPart": {
         "fontAllCaps": "true",
         "AddEPTitleText": "true",
+        "fontcolor": "white",
+        "minPointSize": "95",
+        "maxPointSize": "250",
+        "MaxWidth": "2500",
+        "MaxHeight": "300",
+        "text_offset": "+290",
         "AddTextStroke": "false",
         "strokecolor": "black",
         "strokewidth": "6",
-        "fontcolor": "white",
-        "minPointSize": "50",
-        "maxPointSize": "150",
-        "MaxWidth": "3640",
-        "MaxHeight": "280",
-        "text_offset": "+300",
         "lineSpacing": "0",
         "TextGravity": "south"
       },
       "TitleCardEPTextPart": {
         "fontAllCaps": "true",
         "AddEPText": "true",
+        "fontcolor": "white",
+        "minPointSize": "80",
+        "maxPointSize": "120",
+        "MaxWidth": "1600",
+        "MaxHeight": "150",
+        "text_offset": "+140",
+        "SeasonTCText": "Season",
+        "EpisodeTCText": "Episode",
         "AddTextStroke": "false",
         "strokecolor": "black",
         "strokewidth": "4",
-        "fontcolor": "white",
-        "minPointSize": "50",
-        "maxPointSize": "80",
-        "MaxWidth": "1000",
-        "MaxHeight": "120",
-        "text_offset": "+150",
-        "SeasonTCText": "Season",
-        "EpisodeTCText": "Episode",
         "lineSpacing": "0",
         "TextGravity": "south"
       },
       "SeasonPosterOverlayPart": {
-        "ShowFallback": "true",
         "fontAllCaps": "true",
-        "AddBorder": "true",
+        "AddBorder": "false",
         "AddText": "true",
-        "AddTextStroke": "false",
-        "strokecolor": "black",
-        "strokewidth": "6",
         "AddOverlay": "true",
         "fontcolor": "white",
-        "bordercolor": "black",
+        "bordercolor": "white",
         "minPointSize": "95",
         "maxPointSize": "250",
         "borderwidth": "30",
-        "MaxWidth": "1900",
-        "MaxHeight": "500",
-        "text_offset": "+400",
+        "MaxWidth": "1200",
+        "MaxHeight": "485",
+        "text_offset": "+300",
+        "AddTextStroke": "false",
+        "strokecolor": "black",
+        "strokewidth": "6",
         "lineSpacing": "0",
+        "ShowFallback": "false",
         "TextGravity": "south"
       },
       "ShowTitleOnSeasonPosterPart": {
