fix: Update externalsecret.yaml files to replace 'find' with 'rewrite' for key retrieval
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/bazarr/templates/externalsecret.yaml
+++ b/charts/media/bazarr/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
   dataFrom:
-    - find:
-        path: PLEX_TOKEN
+    - rewrite:
+        - source:
+            key: PLEX_TOKEN
+          target:
+            key: PLEX_TOKEN
