--- a/charts/media/lidarr/templates/externalsecret.yaml
+++ b/charts/media/lidarr/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         LIDARR__AUTH__APIKEY: "{{ `{{ .LIDARR_API_KEY }}` }}"
   dataFrom:
-    - find:
-        path: LIDARR_API_KEY
+    - rewrite:
+        - source:
+            key: LIDARR_API_KEY
+          target:
+            key: LIDARR_API_KEY
