--- a/charts/media/prowlarr/templates/externalsecret.yaml
+++ b/charts/media/prowlarr/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         PROWLARR__AUTH__APIKEY: "{{ `{{ .PROWLARR_API_KEY }}` }}"
   dataFrom:
-    - find:
-        path: PROWLARR_API_KEY
+    - rewrite:
+        - source:
+            key: PROWLARR_API_KEY
+          target:
+            key: PROWLARR_API_KEY
