--- a/charts/media/sabnzbd/templates/externalsecret.yaml
+++ b/charts/media/sabnzbd/templates/externalsecret.yaml
@@ -17,5 +17,8 @@ spec:
         SABNZBD__API_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
         SABNZBD__NZB_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
   dataFrom:
-    - find:
-        path: SABNZBD_API_KEY
+    - rewrite:
+        - source:
+            key: SABNZBD_API_KEY
+          target:
+            key: SABNZBD_API_KEY
