--- a/charts/media/sonarr/templates/externalsecret.yaml
+++ b/charts/media/sonarr/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         SONARR__AUTH__APIKEY: "{{ `{{ .SONARR_API_KEY }}` }}"
   dataFrom:
-    - find:
-        path: SONARR_API_KEY
+    - rewrite:
+        - source:
+            key: SONARR_API_KEY
+          target:
+            key: SONARR_API_KEY
