--- a/charts/media/plex/templates/externalsecret.yaml
+++ b/charts/media/plex/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
   dataFrom:
-    - find:
-        path: PLEX_TOKEN
+    - rewrite:
+        - source:
+            key: PLEX_TOKEN
+          target:
+            key: PLEX_TOKEN
