--- a/charts/media/radarr/templates/externalsecret.yaml
+++ b/charts/media/radarr/templates/externalsecret.yaml
@@ -16,5 +16,8 @@ spec:
       data:
         RADARR__AUTH__APIKEY: "{{ `{{ .RADARR_API_KEY }}` }}"
   dataFrom:
-    - find:
-        path: RADARR_API_KEY
+    - rewrite:
+        - source:
+            key: RADARR_API_KEY
+          target:
+            key: RADARR_API_KEY
