Revert "fix: Update externalsecret.yaml files to replace 'find' with 'rewrite' for key retrieval"
This reverts commit bb056dcd4a5fc2bdc6c259d22864f372436fac3f.

Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/bazarr/templates/externalsecret.yaml
+++ b/charts/media/bazarr/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: PLEX_TOKEN
-          target:
-            key: PLEX_TOKEN
+    - find:
+        path: PLEX_TOKEN
