--- a/charts/media/kapowarr/templates/externalsecret.yaml
+++ b/charts/media/kapowarr/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         KAPOWARR__AUTH__APIKEY: "{{ `{{ .KAPOWARR_API_KEY }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: KAPOWARR_API_KEY
-          target:
-            key: KAPOWARR_API_KEY
+    - find:
+        path: KAPOWARR_API_KEY
