--- a/charts/media/readarr/templates/externalsecret.yaml
+++ b/charts/media/readarr/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         READARR__AUTH__APIKEY: "{{ `{{ .READARR_API_KEY }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: READARR_API_KEY
-          target:
-            key: READARR_API_KEY
+    - find:
+        path: READARR_API_KEY
