--- a/charts/media/sabnzbd/templates/externalsecret.yaml
+++ b/charts/media/sabnzbd/templates/externalsecret.yaml
@@ -17,8 +17,5 @@ spec:
         SABNZBD__API_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
         SABNZBD__NZB_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: SABNZBD_API_KEY
-          target:
-            key: SABNZBD_API_KEY
+    - find:
+        path: SABNZBD_API_KEY
