--- a/charts/media/plex/templates/externalsecret.yaml
+++ b/charts/media/plex/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: PLEX_TOKEN
-          target:
-            key: PLEX_TOKEN
+    - find:
+        path: PLEX_TOKEN
