--- a/charts/media/posterizarr/templates/externalsecret.yaml
+++ b/charts/media/posterizarr/templates/externalsecret.yaml
@@ -19,20 +19,11 @@ spec:
         TVDB_API_KEY: "{{ `{{ .TVDB_API_KEY }}` }}"
         TMDB_READ_API_TOKEN: "{{ `{{ .TMDB_READ_API_TOKEN }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: PLEX_TOKEN
-          target:
-            key: PLEX_TOKEN
-        - source:
-            key: FANARTTV_API_KEY
-          target:
-            key: FANARTTV_API_KEY
-        - source:
-            key: TVDB_API_KEY
-          target:
-            key: TVDB_API_KEY
-        - source:
-            key: TMDB_READ_API_TOKEN
-          target:
-            key: TMDB_READ_API_TOKEN
+    - find:
+        path: PLEX_TOKEN
+    - find:
+        path: FANARTTV_API_KEY
+    - find:
+        path: TVDB_API_KEY
+    - find:
+        path: TMDB_READ_API_TOKEN
