--- a/charts/media/radarr/templates/externalsecret.yaml
+++ b/charts/media/radarr/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         RADARR__AUTH__APIKEY: "{{ `{{ .RADARR_API_KEY }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: RADARR_API_KEY
-          target:
-            key: RADARR_API_KEY
+    - find:
+        path: RADARR_API_KEY
