--- a/charts/media/sonarr/templates/externalsecret.yaml
+++ b/charts/media/sonarr/templates/externalsecret.yaml
@@ -16,8 +16,5 @@ spec:
       data:
         SONARR__AUTH__APIKEY: "{{ `{{ .SONARR_API_KEY }}` }}"
   dataFrom:
-    - rewrite:
-        - source:
-            key: SONARR_API_KEY
-          target:
-            key: SONARR_API_KEY
+    - find:
+        path: SONARR_API_KEY
