fix: Refactor externalsecret.yaml to streamline data retrieval configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/sonarr/templates/externalsecret.yaml
+++ b/charts/media/sonarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        SONARR__AUTH__APIKEY: "{{ `{{ .SONARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: SONARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: SONARR__AUTH__APIKEY
+      remoteRef:
+        key: SONARR_API_KEY
