fix: Update externalsecret.yaml files to replace deprecated 'find' with 'remoteRef' for secret retrieval
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/media/prowlarr/templates/externalsecret.yaml
+++ b/charts/media/prowlarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        PROWLARR__AUTH__APIKEY: "{{ `{{ .PROWLARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: PROWLARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: PROWLARR__AUTH__APIKEY
+      remoteRef:
+        key: PROWLARR_API_KEY
