--- a/charts/media/sabnzbd/templates/externalsecret.yaml
+++ b/charts/media/sabnzbd/templates/externalsecret.yaml
@@ -10,12 +10,11 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        SABNZBD__API_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
-        SABNZBD__NZB_KEY: "{{ `{{ .SABNZBD_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: SABNZBD_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: SABNZBD__API_KEY
+      remoteRef:
+        key: SABNZBD_API_KEY
+    - secretKey: SABNZBD__NZB_KEY
+      remoteRef:
+        key: SABNZBD_API_KEY
