--- a/charts/media/kapowarr/templates/externalsecret.yaml
+++ b/charts/media/kapowarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        KAPOWARR__AUTH__APIKEY: "{{ `{{ .KAPOWARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: KAPOWARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: KAPOWARR__AUTH__APIKEY
+      remoteRef:
+        key: KAPOWARR_API_KEY
