--- a/charts/media/lidarr/templates/externalsecret.yaml
+++ b/charts/media/lidarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        LIDARR__AUTH__APIKEY: "{{ `{{ .LIDARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: LIDARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: LIDARR__AUTH__APIKEY
+      remoteRef:
+        key: LIDARR_API_KEY
