--- a/charts/media/plex/templates/externalsecret.yaml
+++ b/charts/media/plex/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
-  dataFrom:
-    - find:
-        path: PLEX_TOKEN
+    creationPolicy: Owner
+  data:
+    - secretKey: PLEX_TOKEN
+      remoteRef:
+        key: PLEX_TOKEN
