--- a/charts/media/posterizarr/templates/externalsecret.yaml
+++ b/charts/media/posterizarr/templates/externalsecret.yaml
@@ -10,20 +10,17 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        PLEX_TOKEN: "{{ `{{ .PLEX_TOKEN }}` }}"
-        FANARTTV_API_KEY: "{{ `{{ .FANARTTV_API_KEY }}` }}"
-        TVDB_API_KEY: "{{ `{{ .TVDB_API_KEY }}` }}"
-        TMDB_READ_API_TOKEN: "{{ `{{ .TMDB_READ_API_TOKEN }}` }}"
-  dataFrom:
-    - find:
-        path: PLEX_TOKEN
-    - find:
-        path: FANARTTV_API_KEY
-    - find:
-        path: TVDB_API_KEY
-    - find:
-        path: TMDB_READ_API_TOKEN
+    creationPolicy: Owner
+  data:
+    - secretKey: PLEX_TOKEN
+      remoteRef:
+        key: PLEX_TOKEN
+    - secretKey: FANARTTV_API_KEY
+      remoteRef:
+        key: FANARTTV_API_KEY
+    - secretKey: TVDB_API_KEY
+      remoteRef:
+        key: TVDB_API_KEY
+    - secretKey: TMDB_READ_API_TOKEN
+      remoteRef:
+        key: TMDB_READ_API_TOKEN
