--- a/charts/media/radarr/templates/externalsecret.yaml
+++ b/charts/media/radarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        RADARR__AUTH__APIKEY: "{{ `{{ .RADARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: RADARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: RADARR__AUTH__APIKEY
+      remoteRef:
+        key: RADARR_API_KEY
