--- a/charts/media/readarr/templates/externalsecret.yaml
+++ b/charts/media/readarr/templates/externalsecret.yaml
@@ -10,11 +10,8 @@ spec:
     name: external-secrets
   target:
     name: {{ .Release.Name }}
-    template:
-      engineVersion: v2
-      mergePolicy: Replace
-      data:
-        READARR__AUTH__APIKEY: "{{ `{{ .READARR_API_KEY }}` }}"
-  dataFrom:
-    - find:
-        path: READARR_API_KEY
+    creationPolicy: Owner
+  data:
+    - secretKey: READARR__AUTH__APIKEY
+      remoteRef:
+        key: READARR_API_KEY
